[gd_scene load_steps=10 format=3 uid="uid://ca27kblyqc0dx"]

[ext_resource type="Script" path="res://scripts/register.gd" id="1_7cv0k"]
[ext_resource type="FontFile" uid="uid://b4pkdf5nfix06" path="res://shared/fonts/Exo2-Regular.ttf" id="2_gujem"]
[ext_resource type="Theme" uid="uid://bt21n7e5vhsxq" path="res://shared/auth_theme.tres" id="3_l2b3a"]
[ext_resource type="Theme" uid="uid://bu11rtwbbe1g0" path="res://shared/auth_link.tres" id="3_mv4k7"]
[ext_resource type="FontFile" uid="uid://bkyagj15rlibl" path="res://shared/fonts/noto-emoji.ttf" id="3_pocua"]
[ext_resource type="Theme" uid="uid://bbcgiygilksxf" path="res://shared/password_visible_button.tres" id="3_pplsg"]
[ext_resource type="Script" path="res://scripts/base_button.gd" id="4_hnp24"]
[ext_resource type="Texture2D" uid="uid://de3jpqctuaymx" path="res://assets/images/not_visible.png" id="4_yn6tx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eoxdc"]
bg_color = Color(0.270588, 0.482353, 0.615686, 1)

[node name="Register" type="Node2D"]
script = ExtResource("1_7cv0k")

[node name="BackgroundPanel" type="Panel" parent="."]
z_index = -10
offset_right = 1280.0
offset_bottom = 728.0
theme_override_styles/panel = SubResource("StyleBoxFlat_eoxdc")

[node name="TitleLabel" type="Label" parent="."]
offset_top = 48.0
offset_right = 1280.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(0.945098, 0.980392, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_gujem")
theme_override_font_sizes/font_size = 60
text = "REGISTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AlreadyHaveAccountLabel" type="Label" parent="."]
offset_left = 464.0
offset_top = 552.0
offset_right = 711.0
offset_bottom = 580.0
theme_override_font_sizes/font_size = 20
text = "Already have an account?"

[node name="ShowPasswordButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 776.0
offset_top = 272.0
offset_right = 816.0
offset_bottom = 320.0
focus_mode = 0
theme = ExtResource("3_pplsg")
theme_override_fonts/font = ExtResource("3_pocua")
theme_override_font_sizes/font_size = 20
icon = ExtResource("4_yn6tx")
icon_alignment = 1

[node name="GoToLogin" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 720.0
offset_top = 552.0
offset_right = 808.0
offset_bottom = 584.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = ExtResource("3_mv4k7")
theme_override_fonts/font = ExtResource("2_gujem")
theme_override_font_sizes/font_size = 20
text = "Login"
script = ExtResource("4_hnp24")

[node name="InputControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 720.0
offset_top = 208.0
offset_right = 760.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l2b3a")

[node name="EmailLabel" type="Label" parent="InputControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -76.0
offset_right = -201.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
text = "Email"

[node name="PasswordLabel" type="Label" parent="InputControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 12.0
offset_right = -182.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Password"

[node name="DisplayNameLabel" type="Label" parent="InputControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 108.0
offset_right = -162.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
text = "Display Name"

[node name="EmailInput" type="LineEdit" parent="InputControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -44.0
offset_right = 76.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter email"

[node name="PasswordInput" type="LineEdit" parent="InputControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 44.0
offset_right = 28.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter password"
secret = true

[node name="DisplayNameInput" type="LineEdit" parent="InputControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 140.0
offset_right = 76.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter display name"

[node name="RegisterUser" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 464.0
offset_top = 456.0
offset_right = 816.0
offset_bottom = 515.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = ExtResource("3_l2b3a")
theme_override_fonts/font = ExtResource("2_gujem")
theme_override_font_sizes/font_size = 40
text = "REGISTER"
script = ExtResource("4_hnp24")

[node name="ErrorLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 192.0
offset_top = 608.0
offset_right = 1088.0
offset_bottom = 704.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "ERROR"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ShowPasswordButton" to="." method="_on_show_password_button_pressed"]
[connection signal="pressed" from="GoToLogin" to="." method="_on_go_to_login_pressed"]
[connection signal="pressed" from="RegisterUser" to="." method="_on_register_user_pressed"]
